--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor = "#FF4B4B"
+primaryColor = "#4CAF50"
 backgroundColor = "#FFFFFF"
 secondaryBackgroundColor = "#F0F2F6"
 textColor = "#262730"
@@ -11,6 +11,7 @@ enableCORS = false
 enableXsrfProtection = true
 maxUploadSize = 200
 headless = true
+runOnSave = true
 
 [browser]
 gatherUsageStats = false
