--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-streamlit==1.32.0
-supabase==2.12.0
-pandas==2.2.1
-plotly==5.19.0
-python-dotenv==1.0.1
-numpy>=1.24.0
+streamlit>=1.31.0
+pandas>=2.2.0
+numpy>=1.26.0
+plotly>=5.18.0
+python-dotenv>=1.0.0
+supabase>=2.3.0
+pyyaml>=6.0.1
+requests>=2.31.0
 matplotlib>=3.7.0
-pyyaml>=6.0
 pydantic>=2.4.0
 uuid>=1.30
 pillow>=10.0.0 
